--- a/my-project/index.html
+++ b/my-project/index.html
@@ -1,11 +1,19 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <title>my-project</title>
-  </head>
-  <body>
-    <div id="app"></div>
-    <script src="/dist/build.js"></script>
-  </body>
+<!DOCTYPE HTML>
+<html lang="en-US">
+<head>
+	<meta charset="UTF-8">
+	<meta name="description" content="It is a website about education" />
+	<meta name="keywords" content="ssc result, hsc result" />
+	<meta name="author" content="Zaman" />
+	
+	<title>Basic Website</title>
+	<link rel="stylesheet" href="/dist/font-awesome-4.7.0/css/font-awesome.css" />
+	<link rel="stylesheet" href="/dist/style.css" />
+</head>
+<body>
+	<div id="app">
+
+	</div>
+	<script type="text/javascript" src="/dist/build.js"></script>
+</body>
 </html>
