19/45 Vue.js 2 Bangla Tutorial #19: vue-cli | integrate any template of CSE-425 Project Work Completed.

--- a/my-project/index.html
+++ b/my-project/index.html
@@ -6,14 +6,20 @@
 	<meta name="keywords" content="ssc result, hsc result" />
 	<meta name="author" content="Zaman" />
 	
-	<title>Basic Website</title>
+	<title></title>
 	<link rel="stylesheet" href="/dist/font-awesome-4.7.0/css/font-awesome.css" />
 	<link rel="stylesheet" href="/dist/style.css" />
+
 </head>
 <body>
 	<div id="app">
 
-	</div>
-	<script type="text/javascript" src="/dist/build.js"></script>
+    </div>
+
+	
+<script type="text/javascript" src="/dist/build.js"></script>
+
+
+	
 </body>
 </html>
